Join values in consistent string format